fleshing out tests

--- a/resources/Makefile
+++ b/resources/Makefile
@@ -7,6 +7,10 @@ CFLAGS=-I"/System/Library/Frameworks/JavaVM.framework/Headers" -fpic
 
 all: clean build
 
+# TODO: Make a simpler list
+#
+#  ? Should this even be here? 
+
 build: 
 	$(CC) $(CFLAGS) -c OnyxNative.cpp
 	$(CC) $(LNFLAGS) -o lib$(APPNAME).jnilib OnyxNative.o 
