Removed compiler helper flags (hanging instance bootstrapping). Changed name of instcatfn in NativeBindUtils - the over-riding of the existing value in BindUtils was causing an issue which prevented adding java catalog entries after adding native catalog entries in the same job map - the GC could not unload the NativeBindUtils class to reuse the BindUtils due to the static block in both classes.

--- a/test/native/Makefile
+++ b/test/native/Makefile
@@ -3,9 +3,11 @@ CPP=g++
 CC=gcc
 
 ONYXDIR="../../src/native"
+JNIDIR="/Library/Java/JavaVirtualMachines/jdk1.8.0_102.jdk/Contents/Home/include"
+JNIMDDIR="/Library/Java/JavaVirtualMachines/jdk1.8.0_102.jdk/Contents/Home/include/darwin"
 
 LNFLAGS=-dynamiclib -I/System/Library/Frameworks/JavaVM.framework/Headers -framework JavaVM
-CFLAGS=-I"/System/Library/Frameworks/JavaVM.framework/Headers" -I$(ONYXDIR) -fpic 
+CFLAGS=-I"/System/Library/Frameworks/JavaVM.framework/Headers" -I$(ONYXDIR) -I$(JNIDIR) -I$(JNIMDDIR) -fpic 
 
 
 LIBNAME=OnyxNativeTest
@@ -21,4 +23,3 @@ build:
 clean:
 	-rm *.o
 	-rm *.jnilib
-
